@@ -1,3 +1,8 @@
+2013-05-16  Julien Danjou  <julien@danjou.info>
+
+	* gnus-notifications.el (gnus-notifications-notify): Use photo-file as
+	app-icon.
+
 2013-05-15  Glenn Morris  <rgm@gnu.org>
 
 	* shr-color.el (shr-color-visible-luminance-min)
